; ModuleID = '/home/carl/AnghaBench/RetroArch/tasks/extr_task_database.c_intfstream_get_crc.c'
source_filename = "/home/carl/AnghaBench/RetroArch/tasks/extr_task_database.c_intfstream_get_crc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @intfstream_get_crc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @intfstream_get_crc(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca [4096 x i32], align 16
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i64 0, i64* %6, align 8
  store i32 0, i32* %7, align 4
  br label %9

9:                                                ; preds = %14, %2
  %10 = load i32*, i32** %4, align 8
  %11 = getelementptr inbounds [4096 x i32], [4096 x i32]* %8, i64 0, i64 0
  %12 = call i64 @intfstream_read(i32* %10, i32* %11, i32 16384)
  store i64 %12, i64* %6, align 8
  %13 = icmp sgt i64 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %9
  %15 = load i32, i32* %7, align 4
  %16 = getelementptr inbounds [4096 x i32], [4096 x i32]* %8, i64 0, i64 0
  %17 = load i64, i64* %6, align 8
  %18 = call i32 @encoding_crc32(i32 %15, i32* %16, i64 %17)
  store i32 %18, i32* %7, align 4
  br label %9

19:                                               ; preds = %9
  %20 = load i64, i64* %6, align 8
  %21 = icmp slt i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %19
  store i32 0, i32* %3, align 4
  br label %26

23:                                               ; preds = %19
  %24 = load i32, i32* %7, align 4
  %25 = load i32*, i32** %5, align 8
  store i32 %24, i32* %25, align 4
  store i32 1, i32* %3, align 4
  br label %26

26:                                               ; preds = %23, %22
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i64 @intfstream_read(i32*, i32*, i32) #1

declare dso_local i32 @encoding_crc32(i32, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
